--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="woman-places">
         <img src="./images/column.jpg" alt="LaptopMan" />
       </div>
-      <div>
+      <div class="description-place">
         <h1>
           Hello I'am Nur Aleyna Pektaş. Frontend Developer Student. Based in
           Turkiye.
@@ -78,7 +78,6 @@
             </svg>
           </div>
         </div>
-        <div></div>
       </div>
 
       <div class="skills-place">
@@ -118,6 +117,9 @@
             </svg>
           </div>
         </div>
+      </div>
+      <div class="experience-place">
+        <h2>My <span>Experience</span></h2>
       </div>
     </main>
     <footer></footer>
